# nsdemu

./: .gitmodules  CMakeLists.txt  Makefile  README.md  command.c  command.h  main.c  nostr-key.c  nostr-key.h  platform-rp2040.c  platform-unix.c  platform.h  random.c  random.h  secure-secp256k1.c  secure-ubitcoin.cpp  secure.c  secure.h  serial.c  serial.h
test/: GNUmakefile  README.md  main.c  test.c  test.h
